feat: add users methods

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=listando
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/listando
 spring.datasource.username=postgres
 spring.datasource.password=120490
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
